<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/scr">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uno"
        android:id="@+id/btn_uno"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="36dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dos"
        android:id="@+id/btn_dos"
        android:layout_alignTop="@+id/btn_uno"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tres"
        android:id="@+id/btn_tres"
        android:layout_alignTop="@+id/btn_dos"
        android:layout_alignEnd="@+id/editText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cuatro"
        android:id="@+id/btn_cuatro"
        android:layout_below="@+id/btn_uno"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cinco"
        android:id="@+id/btn_cinco"
        android:layout_alignTop="@+id/btn_cuatro"
        android:layout_alignStart="@+id/btn_dos" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seis"
        android:id="@+id/btn_seis"
        android:layout_alignTop="@+id/btn_cinco"
        android:layout_alignStart="@+id/btn_tres" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/siete"
        android:id="@+id/btn_siete"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ocho"
        android:id="@+id/btn_ocho"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/btn_cinco" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nueve"
        android:id="@+id/btn_nueve"
        android:layout_alignTop="@+id/btn_ocho"
        android:layout_alignStart="@+id/btn_seis" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cero"
        android:id="@+id/btn_cero"
        android:layout_below="@+id/btn_siete"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/punto"
        android:id="@+id/btn_punto"
        android:layout_below="@+id/btn_nueve"
        android:layout_alignEnd="@+id/editText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/igual"
        android:id="@+id/btn_igual"
        android:layout_below="@+id/btn_ocho"
        android:layout_alignStart="@+id/btn_ocho" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suma"
        android:id="@+id/btn_sumar"
        android:layout_alignTop="@+id/btn_restar"
        android:layout_alignStart="@+id/btn_igual" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resta"
        android:id="@+id/btn_restar"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/btn_cero"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/division"
        android:id="@+id/btn_division"
        android:layout_below="@+id/btn_restar"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiplicacion"
        android:id="@+id/btn_multiplicacion"
        android:layout_alignTop="@+id/btn_division"
        android:layout_alignStart="@+id/btn_sumar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/borrar"
        android:id="@+id/btn_borrar"
        android:layout_alignBaseline="@+id/btn_multiplicacion"
        android:layout_alignBottom="@+id/btn_multiplicacion"
        android:layout_alignStart="@+id/btn_punto" />


</RelativeLayout>
